<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
  <name>teraranger_description</name>
  <version>1.1.0</version>
  <description>The teraranger_description package</description>

  <maintainer email="baptiste.potier@terabee.com">Baptiste Potier</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/teraranger_description</url>

  <author email="krzysztof.zurad@terabee.com">Krzysztof Zurad</author>
  <author email="pierre-louis.kabaradjian@terabee.com">Kabaradjian Pierre-Louis</author>
  <author email="baptiste.potier@terabee.com">Baptiste Potier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
